// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AplicationEventBridgeRule renders an event bridge with description 1`] = `
"{
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-rule_DA4F2E87\\": {
        \\"description\\": \\"Test description\\",
        \\"event_bus_name\\": \\"default\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"Test-EventBridge-Rule\\"
      }
    }
  }
}"
`;

exports[`AplicationEventBridgeRule renders an event bridge with event bus name 1`] = `
"{
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-rule_DA4F2E87\\": {
        \\"event_bus_name\\": \\"test-bus\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"Test-EventBridge-Rule\\"
      }
    }
  }
}"
`;

exports[`AplicationEventBridgeRule renders an event bridge with sqs target 1`] = `
"{
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-rule_DA4F2E87\\": {
        \\"event_bus_name\\": \\"default\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"Test-EventBridge-Rule\\"
      }
    },
    \\"aws_cloudwatch_event_target\\": {
      \\"test-event-bridge-rule_event-bridge-target_5807E31B\\": {
        \\"arn\\": \\"\${aws_sqs_queue.test-queue.arn}\\",
        \\"depends_on\\": [
          \\"aws_sqs_queue.test-queue\\",
          \\"aws_cloudwatch_event_rule.test-event-bridge-rule_DA4F2E87\\"
        ],
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.test-event-bridge-rule_DA4F2E87.name}\\",
        \\"target_id\\": \\"sqs\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"test-queue\\": {
        \\"name\\": \\"Test-SQS-Queue\\"
      }
    }
  }
}"
`;

exports[`AplicationEventBridgeRule renders an event bridge with tags 1`] = `
"{
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-rule_DA4F2E87\\": {
        \\"event_bus_name\\": \\"default\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"Test-EventBridge-Rule\\",
        \\"tags\\": {
          \\"for\\": \\"test\\",
          \\"my\\": \\"tag\\"
        }
      }
    }
  }
}"
`;

exports[`AplicationEventBridgeRule renders an event bridge without a target 1`] = `
"{
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-rule_DA4F2E87\\": {
        \\"event_bus_name\\": \\"default\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"Test-EventBridge-Rule\\"
      }
    }
  }
}"
`;
